@@ -22,8 +22,7 @@ public class ThreadRenamer {
   }
 
   public static void renameThread(Thread thread, String newName) {
-    log.info("renaming {}#{} thread to {}", thread.getName(), thread.threadId(), newName);
-    thread.setName(newName);
+    log.info("renaming {}#{} thread to {}", thread.getName(), thread.getId(), newName);
   }
 
   public static String getRandomSubThreadNamePrefixFrom(Thread parent) {
